# pontus_onyx

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  most_used_passwords.txt
.github/workflows/: cargo_checks.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/http_server/: mod.rs  tokens.rs  utils.rs  webfinger.rs
cli/src/http_server/api/: mod.rs  options.rs
cli/src/http_server/api/delete/: mod.rs  tests.rs
cli/src/http_server/api/get/: tests.rs
cli/src/http_server/api/oauth/: mod.rs
cli/src/http_server/api/put/: mod.rs  tests.rs
cli/src/http_server/init/: database.rs  https.rs  users.rs
cli/src/http_server/middlewares/: logger.rs
cli/src/http_server/middlewares/auth/: tests.rs
cli/static/: index.html
gui/: Cargo.toml  README.md  tauri.conf.json
gui/src/: main.rs
gui/static/: index.html
lib/: Cargo.toml
lib/src/: lib.rs  scope.rs
lib/src/assets/: mod.rs
lib/src/client/: mod.rs
lib/src/database/: mod.rs
lib/src/database/sources/folder/delete/: error.rs  mod.rs  tests.rs
lib/src/database/sources/folder/get/: error.rs  mod.rs
lib/src/database/sources/folder/put/: error.rs
lib/src/database/sources/local_storage/: mod.rs
lib/src/database/sources/local_storage/delete/: error.rs
lib/src/database/sources/local_storage/get/: error.rs  tests.rs
lib/src/database/sources/local_storage/put/: error.rs  mod.rs  tests.rs
lib/src/database/sources/memory/delete/: error.rs  tests.rs
lib/src/database/sources/memory/get/: error.rs  tests.rs
lib/src/database/sources/memory/put/: error.rs  tests.rs
lib/src/http_server/: mod.rs  tokens.rs  utils.rs  webfinger.rs
lib/src/http_server/api/: head.rs  mod.rs
lib/src/http_server/api/delete/: mod.rs  tests.rs
lib/src/http_server/api/get/: mod.rs  tests.rs
lib/src/http_server/api/oauth/: get.rs  post.rs
lib/src/http_server/api/put/: mod.rs  tests.rs
lib/src/http_server/init/: database.rs  https.rs  logger.rs  settings.rs  users.rs
lib/src/http_server/middlewares/: hsts.rs
lib/src/http_server/middlewares/auth/: mod.rs  tests.rs
lib/src/http_server/users/: mod.rs
lib/src/item/: datafiles.rs  mod.rs  tests.rs
lib/src/item/item_path/: item_path_part.rs
lib/src/item/item_path/tests/: from_str.rs  mod.rs
src/: client.rs  lib.rs  scope.rs  utils.rs
src/client/: base_client.rs  mod.rs  mod_legacy.rs  storage.rs
src/database/: create.rs  delete.rs  get.rs  load.rs  mod.rs  put.rs  read.rs  save.rs  update.rs  utils.rs
src/database/delete/: error.rs  mod.rs
src/database/get/: error.rs  mod.rs
src/database/put/: error.rs  mod.rs
src/database/sources/: mod.rs
src/database/sources/folder/: delete.rs  get.rs  mod.rs  put.rs  read.rs
src/database/sources/folder/delete/: error.rs  tests.rs
src/database/sources/folder/get/: error.rs  tests.rs
src/database/sources/folder/put/: error.rs  mod.rs  tests.rs
src/database/sources/local_storage/: delete.rs  get.rs  mod.rs  put.rs
src/database/sources/local_storage/delete/: error.rs  mod.rs  tests.rs
src/database/sources/local_storage/get/: error.rs  mod.rs
src/database/sources/local_storage/put/: error.rs  mod.rs  tests.rs
src/database/sources/memory/: delete.rs  get.rs  mod.rs  put.rs  read.rs
src/database/sources/memory/delete/: error.rs  mod.rs  tests.rs
src/database/sources/memory/get/: error.rs  mod.rs
src/database/sources/memory/put/: error.rs  mod.rs  tests.rs
src/item/: content_type.rs  datafiles.rs  etag.rs  mod.rs
src/item/item_path/: mod.rs
src/item/item_path/tests/: from_path.rs
