[package]
name = "pontus_onyx"
version = "0.8.0"
authors = ["Jimskapt <rami.programmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
client_lib = []
server_lib = [
    "bincode",
    "toml"
]
server_bin = [
    "server_lib",
    "percent-encoding",
    "actix-web",
    "actix-rt",
    "serde_json",
    "futures",
    "regex",
    "rand",
    "hmac-sha512",
    "zeroize",
    "rpassword",
    "rustls",
    "actix",
    "charlie_buffalo",
    "rmp-serde"
]

[dependencies]
serde = { version = "^1", features = ["derive"] }
ulid = { version = "^0.4", features = ["serde"] }
chrono = { version = "^0.4", features = ["serde"] }
derivative = { version = "^2" }

percent-encoding = { version = "^2", optional = true }
bincode = { version = "^1", optional = true }
serde_json = { version = "^1", optional = true }
actix-web = { version = "^3", features = ["rustls"], optional = true }
actix-rt = { version = "^2", optional = true }
futures = { version = "^0.3", optional = true }
regex = { version = "^1", optional = true }
rand = { version = "^0.8", optional = true }
hmac-sha512 = { version = "^0.1", optional = true }
zeroize = { version = "^1", optional = true }
toml = { version = "^0.5", optional = true }
rpassword = { version = "^5", optional = true }
rustls = { version = "^0.18", optional = true }
actix = { version = "^0.12", optional = true }
charlie_buffalo = { version = "^1", optional = true }
rmp-serde = { version = "^0.15", optional = true }

[dev-dependencies]
tempfile = "^3"

[[bin]]
name = "pontus_onyx"
path = "src/bin/main.rs"
required-features = ["server_bin"]
