[package]
name = "pontus_onyx"
version = "0.15.0"
authors = ["Jimskapt"]
edition = "2021"
description = "A remoteStorage server and client implemented in Rust"
keywords = ["remotestorage", "database", "local-first", "http", "rest"]
categories = ["database", "database-implementations", "web-programming", "wasm"]
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/Jimskapt/pontus_onyx"

[features]
default = []
client_lib = [
    "serde_json",
    "lazy_static",
    "http",
    "js-sys",
    "web-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "pct-str"
]
client_lib_cookies = [
    "client_lib"
]
server_lib = [
    "bincode",
    "toml"
]
server_local_storage = [
    "web-sys",
    "wasm-bindgen",
    "base64",
    "serde_json"
]
server_file_storage = []
server_bin = [
    "server_lib",
    "server_file_storage",

    "pct-str",
    "actix-web",
    "actix-rt",
    "serde_json",
    "futures",
    "rand",
    "hmac-sha512",
    "zeroize",
    "rpassword",
    "rustls",
    "rustls-pemfile",
    "charlie_buffalo",
    "rmp-serde",
    "futures-util"
]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
ulid = { version = "0.5.0", features = ["serde"] }
time = { version = "0.3.9", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
derivative = { version = "2.2.0" }
regex = { version = "1.5.5" }

pct-str = { version = "1.1.0", optional = true }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.80", optional = true }
actix-web = { version = "4.0.1", features = ["rustls"], optional = true }
actix-rt = { version = "2.7.0", optional = true }
futures = { version = "0.3.21", optional = true }
rand = { version = "0.8.5", optional = true }
hmac-sha512 = { version = "1.1.1", optional = true }
zeroize = { version = "1.5.5", optional = true }
toml = { version = "0.5.9", optional = true }
rpassword = { version = "6.0.1", optional = true }
rustls = { version = "0.20.4", optional = true }
rustls-pemfile = { version = "1.0.0", optional = true }
charlie_buffalo = { version = "1.0.2", optional = true }
rmp-serde = { version = "1.1.0", optional = true }
base64 = { version = "0.13.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
http = { version = "0.2.7", optional = true }
js-sys = { version = "0.3.57", optional = true }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.30", optional = true }
futures-util = { version = "0.3.21", optional = true }

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'HtmlElement',
  'Element',
  'Node',
  'Location',
  'console',
  'ReadableStream',
  'ReadableStreamDefaultReader',
  'ReadableStreamDefaultReadResult',
  'CssStyleDeclaration',
  'History',
  'HtmlDocument',
  'Storage'
]

[dev-dependencies]
tempfile = "3.3.0"
fs_extra = "1.2.0"

[[bin]]
name = "pontus_onyx"
path = "src/bin/main.rs"
required-features = ["server_bin"]
