[package]
name = "pontus_onyx_cli"
version = "0.2.0"
authors = ["Jimskapt"]
edition = "2021"
description = "A remoteStorage server as command-line interface"
keywords = ["remotestorage", "database", "local-first", "http", "rest"]
categories = ["database", "database-implementations", "web-programming"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Jimskapt/pontus_onyx"

[dependencies]
pontus_onyx = { path = "../lib", features = ["server", "server_file_storage", "actix_server", "serde_json"] }

serde = { version = "1.0.142", features = ["derive"] }
ulid = { version = "1.0.0", features = ["serde"] }
time = { version = "0.3.12", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
derivative = "2.2.0"
regex = "1.6.0"

pct-str = "1.1.0"
serde_json = "1.0.83"
actix-web = { version = "4.1.0", features = ["rustls"] }
actix-rt = "2.7.0"
futures = "0.3.21"
rand = "0.8.5"
hmac-sha512 = "1.1.2"
zeroize = "1.5.7"
rpassword = "7.0.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.1"
charlie_buffalo = "1.0.2"
rmp-serde = "1.1.0"
futures-util = "0.3.21"
bincode = "1.3.3"
toml = "0.5.9"

[dev-dependencies]
tempfile = "3.3.0"
fs_extra = "1.2.0"
