[package]
name = "pontus_onyx_gui"
version = "0.2.0"
authors = ["Jimskapt"]
edition = "2021"
description = "A remoteStorage server as graphical interface"
keywords = ["remotestorage", "database", "local-first", "http", "rest"]
categories = ["database", "database-implementations", "web-programming"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Jimskapt/pontus_onyx"
rust-version = "1.57"

[features]
default = [
	"custom-protocol"
]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
pontus_onyx = { path = "../lib", features = ["server", "server_file_storage", "actix_server", "assets"] }

serde = { version = "1.0.143", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
actix-web = { version = "4.1.0", features = ["rustls"] }

charlie_buffalo = "1.0.2"
dunce = "1.0.2"
tinyfiledialogs = "3.9.1"
serde_json = "1.0.83"
actix-rt = "2.7.0"
