[package]
name = "pontus_onyx"
version = "0.16.7"
authors = ["Jimskapt"]
edition = "2021"
description = "A remoteStorage server and client library"
keywords = ["remotestorage", "database", "local-first", "http", "rest"]
categories = ["database", "database-implementations", "web-programming", "wasm"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Jimskapt/pontus_onyx"
documentation = "https://docs.rs/pontus_onyx/"

[features]
client = [
    "serde_json",
    "lazy_static",
    "http",
    "js-sys",
    "web-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "pct-str"
]
client_cookies = [
    "client"
]
actix_server = [
    "actix-web",
    "serde_json",
    "charlie_buffalo",
    "rmp-serde",
    "rand",
    "hmac-sha512",
    "futures",
    "futures-util",
    "zeroize",
    "pct-str",
    "rustls",
    "rustls-pemfile",
    "rpassword"
]
server = [
    "bincode",
    "toml"
]
server_local_storage = [
    "web-sys",
    "wasm-bindgen",
    "base64",
    "serde_json"
]
server_file_storage = []
assets = []

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
ulid = { version = "1.0.0", features = ["serde"] }
time = { version = "0.3.12", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
derivative = "2.2.0"
regex = "1.6.0"

pct-str = { version = "1.1.0", optional = true }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.83", optional = true }
actix-web = { version = "4.1.0", features = ["rustls"], optional = true }
actix-rt = { version = "2.7.0", optional = true }
futures = { version = "0.3.21", optional = true }
rand = { version = "0.8.5", optional = true }
hmac-sha512 = { version = "1.1.2", optional = true }
zeroize = { version = "1.5.7", optional = true }
toml = { version = "0.5.9", optional = true }
rpassword = { version = "7.0.0", optional = true }
rustls = { version = "0.20.6", optional = true }
rustls-pemfile = { version = "1.0.1", optional = true }
charlie_buffalo = { version = "1.0.2", optional = true }
rmp-serde = { version = "1.1.0", optional = true }
base64 = { version = "0.13.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
http = { version = "0.2.8", optional = true }
js-sys = { version = "0.3.59", optional = true }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.32", optional = true }
futures-util = { version = "0.3.21", optional = true }
tauri = { version = "1.0.5", features = ["api-all"], optional = true }

[dependencies.web-sys]
version = "0.3.59"
optional = true
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'HtmlElement',
  'Element',
  'Node',
  'Location',
  'console',
  'ReadableStream',
  'ReadableStreamDefaultReader',
  'ReadableStreamDefaultReadResult',
  'CssStyleDeclaration',
  'History',
  'HtmlDocument',
  'Storage'
]

[dev-dependencies]
tempfile = "3.3.0"
fs_extra = "1.2.0"
